  * FEATURE: Added Plaintext signature for Yammer
  * FEATURE: Added Twitter SSL endpoints (use TwitterApi.SSL.class)

[1.2.1]
  * FEATURE: Added custom charset support to Request (thanks Eric Genet)
  * FEATURE: Added support for Vkontakte (thanks dotbg)
  * FEATURE: Added Sohu Weibo, Netease Weibo & Sina Weibo Apis (thanks Arthur Wang)
  * FEATURE: Added support for persistent Http Connections (thanks Craig Minton)

[1.2.2]
  * FIX: Added support for JDK 1.5. Issue #146 (thanks Sripathi Krishnan)
  * FIX: Invalid character constant error message. Issue #137 (thanks Scott Scoble)
  * FEATURE: Added a Api class to handle windows live authentication. Issue #135 (thanks Tomas Lin)
  * FEATURE: Added refresh token feature for Yahoo! API. Issue #134 (thanks Aaron Foltz)
  * FEATURE: Added support for Plurk API. Issue #130 (thanks Chia-Wei Li)
  * FIX: Request.setConnectTimeout() and setReadTimeout() throw NPE. Issue #123 (thanks thepizzle)

[1.2.3]
  * FEATURE: Added default Content-Type header
  * FEATURE: Sapo Api
  * FEATURE: Plurk Mobile Api
  * FEATURE: Kaixin and QWeibo Apis
  * FEATURE: SimpleGeo Api

[1.3.0]
  * FEATURE: Multiple parameters with the same name supported.
  * FEAUTRE: 'debug' mode that logs useful information about the signature making

[1.3.1]
  * FEATURE: Meetup.com Api
  * FEATURE: NetProspex Api
  * FEATURE: Kaixin2, SinaWeibo2 and Renren Apis
  * FEATURE: ImgUr Api
  * FEATURE: Freelancer Api (thanks Juan Palacios!)
  * FIX: Allow digits in url schemes
  * FEATURE: Specific exception for connection problems (OAuthConnectionException)
  * FIX: Dropbox Api and Evernote Api updated to their latests versions
  * FEATURE: Digg and Skyrock Apis

[1.3.2]
  * FIX: Don't include oauth_token in 2legged calls.
  * FEATURE: RSA-SHA1 Signatures.
  * FEATURE: equals & hashcode on Token object.
  * FEATURE: ConstantContact Api

[1.3.3]
  * FEATURE: accessToken and requestToken timeouts default to 2 seconds and can be specified.